fix form input wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ main {
 
 .form-input-box {
   display: inline-block;
+  white-space: nowrap;
   overflow: hidden;
   border: 1px solid var(--secondary-light);
   border-radius: 0.4rem;
